--- a/others_resolution.css
+++ b/others_resolution.css
@@ -1,6 +1,6 @@
 /* ipad version of the site */
 
-@media screen and (min-width: 481px) and (max-width: 1024px) 
+@media screen and (min-width: 481px) and (max-width: 1360px) 
 {
 	.vanish_mobile
 	{
@@ -65,6 +65,13 @@
 		width: auto;
 	}
 	
+	.title_div
+	{
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+	}
+	
 /* 2nd section */
 
 	.second_section
@@ -72,7 +79,7 @@
 		flex-flow: wrap;
 		margin-left: 0px;
 		align-items: center;
-		justify-content: space-between; 
+		justify-content: space-around; 
 	}
 	
 	.filters
@@ -135,7 +142,8 @@
 	
 	.accommodation_image 
 	{
-		width: 97%;
+		width: 100%;
+		border-style: none; 
 	}
 	
 	.figcaption_accommo
@@ -181,14 +189,15 @@
 	
 	.accommodation_image_famous
 	{
-		height: 155px;
+		height: 163px;
 		width: 39%;
+		border-style: none; 
 	}
 	
 	.figcaption_accommo_famous
 	{
 		height: 163px;
-		width: 60%;
+		width: 61%;
 	}
 	
 	.star_famous
