--- a/style.css
+++ b/style.css
@@ -32,7 +32,9 @@
 
 body
 {
-	margin: 0px;
+	/* margin: 0px; */
+	max-width: 1500px;
+    margin: auto;
 }
 
 .vanish
@@ -247,6 +249,7 @@ header
 .container_1-2
 {
 	display: flex;
+	justify-content: space-between;
 }
 
 .marseille_accommodation
@@ -493,6 +496,7 @@ header
 {
 	display: flex;
 	flex-flow: wrap;
+	justify-content: space-between; 
 }
 
 
