--- a/others_resolution.css
+++ b/others_resolution.css
@@ -148,7 +148,7 @@
 	
 	.figcaption_accommo
 	{
-		width: 100%
+		width: 100%;
 	}
 	
 	#container_image_famous
@@ -166,7 +166,7 @@
 	
 	.accommodation_famous
 	{
-		width: 100%
+		width: 100%;
 	}
 	
 	.accommodation_famous h1
