--- a/style.css
+++ b/style.css
@@ -248,7 +248,7 @@ header
 .container_1-2
 {
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-evenly;
 }
 
 .marseille_accommodation
@@ -495,7 +495,7 @@ header
 {
 	display: flex;
 	flex-flow: wrap;
-	justify-content: space-between; 
+	justify-content: space-evenly; 
 }
 
 
