--- a/style.css
+++ b/style.css
@@ -256,7 +256,8 @@ header
 	width: 814px;
 	margin-left: 32px;
 	background-color: #F2F2F2;
-	border-radius: 25px
+	border-radius: 25px;
+	margin-right: 20px;
 }
 
 .marseille_accommodation h1
@@ -277,15 +278,17 @@ header
 #container_image_marseille figure
 {
 	margin-left: 16px;
-	margin-right: 16px;	
+	margin-right: 0px;	
 	box-shadow: 1px 1px 12px #cac7c6;
 	border-radius: 25px;
+	width: 30%;
+	max-width: 330px;
 }
 
 .accommodation_image
 {
 	height: 120px;
-	width: 220px;
+	width: 95.7%; 
 	border-top-right-radius: 25px;
 	border-top-left-radius: 25px;
 	border-width: 4px;
@@ -363,27 +366,27 @@ header
 .figure_famous
 {
 	display: flex;
-	margin-left: 34px;
+	margin-left: 6%;
+	margin-right: 7%;
 	margin-bottom: 38px;
 	box-shadow: 1px 1px 12px #cac7c6;
 	border-radius: 25px;
+	width: 88%;
 }
 
 #container_image_famous
 {
 	height: 638.917px;
-	width: 425px;
-	flex-wrap: wrap;
-	top: -638px;
+	width: 87%;
 	background-color: #F2F2F2; 
 	border-radius: 25px;
-	margin-right: 40px;
+	margin-right: 0px;
 }
 
 .accommodation_image_famous
 {
 	height: 141px;
-	width: 148px;
+	width: 100px;
 	border-width: 4px;
 	border-style: solid;
 	border-color: white;
@@ -406,10 +409,15 @@ header
 	margin-right: 2px;
 }
 
+.accommodation_famous
+{
+	width: 37%;
+}
+
 .accommodation_famous h1
 {
 	padding-top: 10px;
-    padding-left: 34px;
+    padding-left: 16px;
 	margin-bottom: 5px;
 }
 
@@ -423,13 +431,13 @@ header
 {
 	height: 16.917px;
 	margin-top: 37px;
-	margin-right: 32px;
+	margin-right: 17px;
 }
 
 .figcaption_accommo_famous
 {
 	background-color: white;
-	width: 199.933px;
+	width: 100%;
 	height: 149px;
 	margin-top: 0px;
 	padding-bottom: 0px;
@@ -454,7 +462,7 @@ header
 
 .star_famous
 {
-	padding-top: 30px;
+	padding-top: 10px;
 }
 
 .padding_famous
