--- a/others_resolution.css
+++ b/others_resolution.css
@@ -233,6 +233,12 @@
 		margin-left: auto; 
 	}
 	
+	.activities_div
+	{
+		flex-flow: wrap;
+		justify-content: space-evenly; 
+	}
+	
 	.activities_div_mobile
 	{
 		margin-left: auto;
